--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="https://medium.com/me/stories/public">Blog</a>
+          </li>
         </ul>
       </div>
     </nav>
