--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@
           <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
             <a href="mailto:name@email.com">amr.f.farahat [at] gmail.com</a>
           </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5">I believe that we reached the time when AI and neuroscience have to advance together. That is why after graduating medical school, I moved to Germany to do a master degree in 
+            integrative neuroscience with a special focus on computational neuroscience and data analysis, studied machine learning and taught myself deep learning. My goal is to develop novel machine learning-based data analysis 
+            techniques that are capable of handling the vast amount of neural data produced in neuroscience labs and help accelerate neuroscience research. Moreover, I concur with the philosophy of neuroscience-inspired AI research and 
+            believe that accelerating the neuroscience research will benefit the AI field itself. Additionally, because of my medical background, I am also interested in applying machine learning to healthcare problems. I have practiced medicine for a period of time before turning to research and I see how machine learning 
+            can empower healthcare specialists especially in ambiguous scenarios and scenarios that  require fast decision making.
+
+          </p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/amr-farahat-738595151/">
               <i class="fab fa-linkedin-in"></i>
