--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <h1 class="mb-0">Amr
             <span class="text-primary">Farahat</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+          <div class="subheading mb-5">
             <a href="mailto:name@email.com">amr.f.farahat [at] gmail.com</a>
           </div>
           <p class="lead mb-5">I believe that we reached the time when AI and neuroscience have to advance together. That is why after graduating medical school, I moved to Germany to do a master degree in 
