--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="subheading mb-5">
             <a href="mailto:name@email.com">amr.f.farahat [at] gmail.com</a>
           </div>
-          <p class="lead mb-5">I believe that we reached the time when AI and neuroscience have to advance together. That is why after graduating medical school, I moved to Germany to do a master degree in 
+          <p class="lead mb-5" align="justify">I believe that we reached the time when AI and neuroscience have to advance together. That is why after graduating medical school, I moved to Germany to do a master degree in 
             integrative neuroscience with a special focus on computational neuroscience and data analysis, studied machine learning and taught myself deep learning. My goal is to develop novel machine learning-based data analysis 
             techniques that are capable of handling the vast amount of neural data produced in neuroscience labs and help accelerate neuroscience research. Moreover, I concur with the philosophy of neuroscience-inspired AI research and 
             believe that accelerating the neuroscience research will benefit the AI field itself. Additionally, because of my medical background, I am also interested in applying machine learning to healthcare problems. I have practiced medicine for a period of time before turning to research and I see how machine learning 
