--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <span class="text-primary">Farahat</span>
           </h1>
           <div class="subheading mb-5">
-            <a href="mailto:name@email.com">amr.f.farahat [at] gmail.com</a>
+            <a href="mailto:amr.f.farahat@gmail.com">amr.f.farahat [at] gmail.com</a>
           </div>
           <p class="lead mb-5" align="justify">I believe that we reached the time when AI and neuroscience have to advance together. That is why after graduating medical school, I moved to Germany to do a master degree in 
             integrative neuroscience with a special focus on computational neuroscience and data analysis, studied machine learning and taught myself deep learning. My goal is to develop novel machine learning-based data analysis 
