--- a/index.html
+++ b/index.html
@@ -108,49 +108,91 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Assistant researcher (fMRI data analysis)</h3>
-              <div class="subheading mb-3">Neurology Department – OVGU Hospital, Magdeburg, Germany.
+              <div class="subheading mb-3" style="white-space:pre-line;">Neurology Department – OVGU Hospital, Magdeburg, Germany.
                   Neurocybernetics and Rehabilitation group.
                   Dr. med. Catherine Sweeney-Reed.
               </div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">April 2017 – present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <div class="resume-content mr-auto">
+                <h3 class="mb-0">Master thesis student</h3>
+                <div class="subheading mb-3" style="white-space:pre-line;">Leibniz Institute for Neurobiology (LIN), Magdeburg, Germany.
+                    Department of Behavioral Neurology.
+                    Dr.-Ing. Christoph Reichert.
+                </div>
+              </div>
+              <div class="resume-date text-md-right">
+                <span class="text-primary">January 2018 – August 2018</span>
+              </div>
             </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
-            </div>
-          </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-content mr-auto">
+                  <h3 class="mb-0">Research Student (EEG data analysis)</h3>
+                  <div class="subheading mb-3" style="white-space:pre-line;">Leibniz Institute for Neurobiology (LIN), Magdeburg, Germany.
+                      Visual Attention & Perceptual Learning research group.
+                      Prof. Dr. Jens-Max Hopf.
+                  </div>
+                </div>
+                <div class="resume-date text-md-right">
+                  <span class="text-primary">December 2017 – January 2018</span>
+                </div>
+              </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
-            </div>
-          </div>
+              <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                  <div class="resume-content mr-auto">
+                    <h3 class="mb-0">Research Student (Modeling neural networks)</h3>
+                    <div class="subheading mb-3" style="white-space:pre-line;">German center for neurodegenerative diseases (DZNE), Magdeburg, Germany.
+                        Cognitive Neurophysiology research group.
+                        Dr. Motoharu Yoshida.
+                    </div>
+                  </div>
+                  <div class="resume-date text-md-right">
+                    <span class="text-primary">August 2016 – February 2017</span>
+                  </div>
+                </div>
+
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
+                      <h3 class="mb-0">Reseach Student (LFP data analysis)</h3>
+                      <div class="subheading mb-3" style="white-space:pre-line;">Leibniz Institute for Neurobiology (LIN), Magdeburg, Germany.
+                          Department of systems physiology.
+                          Dr. Max Happel.
+                      </div>
+                    </div>
+                    <div class="resume-date text-md-right">
+                      <span class="text-primary">March 2016 – April 2016</span>
+                    </div>
+                  </div>
+
+
+                  <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                      <div class="resume-content mr-auto">
+                        <h3 class="mb-0">General Practitioner</h3>
+                        <div class="subheading mb-3" style="white-space:pre-line;">Ministry Of Health and Population, Egypt.
+                        </div>
+                      </div>
+                      <div class="resume-date text-md-right">
+                        <span class="text-primary">March 2015 – September 2015</span>
+                      </div>
+                    </div>
+
+                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                        <div class="resume-content mr-auto">
+                          <h3 class="mb-0">Intern Doctor</h3>
+                          <div class="subheading mb-3" style="white-space:pre-line;">Mansoura University Hospitals, Egypt.
+                          </div>
+                        </div>
+                        <div class="resume-date text-md-right">
+                          <span class="text-primary">March 2014 – February 2015</span>
+                        </div>
+                      </div>                    
+
 
         </div>
 
