--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/resume.css" rel="stylesheet">
 
   </head>
 
@@ -47,7 +47,7 @@
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#qualifications">Further Qualifications</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
@@ -88,6 +88,9 @@
             </a>
             <a href="https://github.com/amr-farahat">
               <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.kaggle.com/amro91">
+              <i class="fab fa-kaggle"></i>
             </a>
             <a href="https://twitter.com/AmrFouad_">
               <i class="fab fa-twitter"></i>
@@ -230,65 +233,25 @@
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="qualifications">
         <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
+          <h2 class="mb-5">Further Qualifications</h2>
 
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline dev-icons">
-            <li class="list-inline-item">
-              <i class="fab fa-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-css3-alt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-js-square"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-angular"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-react"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-node-js"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-npm"></i>
-            </li>
-          </ul>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+              <div class="resume-content mr-auto">
+                <h3 class="mb-0">International Startup School</h3>
+                <div class="subheading mb-3">Transfer- und Gründerzentrum (TUGZ), Otto von Gureicke University, Germany.</div>
+              </div>
 
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
-          </ul>
+            </div>
+  
+            <div class="resume-item d-flex flex-column flex-md-row">
+              <div class="resume-content mr-auto">
+                <h3 class="mb-0">Business Planning Course</h3>
+                <div class="subheading mb-3">Chair of Entrepreneurship, Otto von Gureicke University, Germany.</div>
+              </div>
+
+            </div>
         </div>
       </section>
 
@@ -306,37 +269,49 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
+          <h2 class="mb-5">Awards</h2>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+              Scholarship granted from Leibniz institute for Neurobiology in the context of the project “SFB 779 – MGK” for scoring the best grades in the integrative neuroscience master program.</li>
+
           </ul>
         </div>
       </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+          <div class="my-auto">
+            <h2 class="mb-5">Projects</h2>
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-content mr-auto">
+                  <h3 class="mb-0">Deep learning for EEG decoding and brain dynamics discovery.</h3>
+                  <div>I am using deep learning models for classifying P300 ERP component in EEG data for BCI speller applications. 
+                    In addition to that, I am using different features visualization techniques e.g. saliency maps to extract the important spatial and temporal 
+                    features that drive the model and should reflect where attention originates in the brain and compare it to what we already know from the neuroscience literature.
+                  </div>
+                </div>
+                
+              </div>
+    
+              <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-content mr-auto">
+                  <h3 class="mb-0">Convolutional autoencoders for automatic LFP artifacts detection.</h3>
+                  <div>I am using convolutional deconvolutional autoencoders to detect artifacts in Local Field Potential data in a semisupervised automatic way.
+                  </div>
+                </div>
+              </div>
+
+              <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                  <div class="resume-content mr-auto">
+                    <h3 class="mb-0">Investigating motor learning circuitry in a 7T  functional connectivity fMRI study.</h3>
+                    <div>Motor/sequence learning is known to involve a cerebellar-thalamo-cortical circuit that especially includes VIM (Ventral Intermediate Nucleus Of The Thalamus).
+                       We are trying to look closely into VIM with 7T high spatial resolution to investigate if it is possible to subdivide it into functionally distinct subregions.
+                    </div>
+                  </div>
+                </div>
+
+          </div>
+        </section>
 
     </div>
 
