--- a/index.html
+++ b/index.html
@@ -210,8 +210,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Otto von Guericke University</h3>
-              <div class="subheading mb-3">Master of Science</div>
-              <div>Integrative Neuroscience</div>
+              <div class="subheading mb-3">Master of Science (Integrative Neuroscience)</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2015 - September 2018</span>
