--- a/index.html
+++ b/index.html
@@ -50,14 +50,16 @@
             <a class="nav-link js-scroll-trigger" href="#qualifications">Further Qualifications</a>
           </li>
           <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+              </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
-          </li>
+
+   
           <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://medium.com/me/stories/public">Blog</a>
           </li> !-->
@@ -108,7 +110,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row mb-3">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Assistant researcher (fMRI data analysis)</h3>
               <div class="subheading mb-3" style="white-space:pre-line;">Neurology Department – OVGU Hospital, Magdeburg, Germany.
@@ -121,7 +123,7 @@
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row mb-3">
               <div class="resume-content mr-auto">
                 <h3 class="mb-0">Master thesis student</h3>
                 <div class="subheading mb-3" style="white-space:pre-line;">Leibniz Institute for Neurobiology (LIN), Magdeburg, Germany.
@@ -134,7 +136,7 @@
               </div>
             </div>
 
-            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-item d-flex flex-column flex-md-row mb-3">
                 <div class="resume-content mr-auto">
                   <h3 class="mb-0">Research Student (EEG data analysis)</h3>
                   <div class="subheading mb-3" style="white-space:pre-line;">Leibniz Institute for Neurobiology (LIN), Magdeburg, Germany.
@@ -147,7 +149,7 @@
                 </div>
               </div>
 
-              <div class="resume-item d-flex flex-column flex-md-row mb-5">
+              <div class="resume-item d-flex flex-column flex-md-row mb-3">
                   <div class="resume-content mr-auto">
                     <h3 class="mb-0">Research Student (Modeling neural networks)</h3>
                     <div class="subheading mb-3" style="white-space:pre-line;">German center for neurodegenerative diseases (DZNE), Magdeburg, Germany.
@@ -160,7 +162,7 @@
                   </div>
                 </div>
 
-                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-item d-flex flex-column flex-md-row mb-3">
                     <div class="resume-content mr-auto">
                       <h3 class="mb-0">Reseach Student (LFP data analysis)</h3>
                       <div class="subheading mb-3" style="white-space:pre-line;">Leibniz Institute for Neurobiology (LIN), Magdeburg, Germany.
@@ -174,7 +176,7 @@
                   </div>
 
 
-                  <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                  <div class="resume-item d-flex flex-column flex-md-row mb-3">
                       <div class="resume-content mr-auto">
                         <h3 class="mb-0">General Practitioner</h3>
                         <div class="subheading mb-3" style="white-space:pre-line;">Ministry Of Health and Population, Egypt.
@@ -185,7 +187,7 @@
                       </div>
                     </div>
 
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-item d-flex flex-column flex-md-row mb-3">
                         <div class="resume-content mr-auto">
                           <h3 class="mb-0">Intern Doctor</h3>
                           <div class="subheading mb-3" style="white-space:pre-line;">Mansoura University Hospitals, Egypt.
@@ -236,7 +238,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Further Qualifications</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row">
               <div class="resume-content mr-auto">
                 <h3 class="mb-0">International Startup School</h3>
                 <div class="subheading mb-3">Transfer- und Gründerzentrum (TUGZ), Otto von Gureicke University, Germany.</div>
@@ -249,34 +251,27 @@
                 <h3 class="mb-0">Business Planning Course</h3>
                 <div class="subheading mb-3">Chair of Entrepreneurship, Otto von Gureicke University, Germany.</div>
               </div>
+            </div>
+
+            <div class="resume-item d-flex flex-column flex-md-row">
+                <div class="resume-content mr-auto">
+                  <h3 class="mb-0">5<sup>th</sup> Human Brain Project winter school: Future Medicine</h3>
+                  <div class="subheading mb-0">Obegugl, Austria</div>
+                  <p class="mb-3">Influencing clinical diagnoses and treatments by data mining analysis- and modeling-driven neuroscience.</p>
+            </div>
+          </div>
+            <div class="resume-item d-flex flex-column flex-md-row">
+                <div class="resume-content mr-auto">
+                  <h3 class="mb-0">4<sup>th</sup> Human Brain Project summer school: Future Computing</h3>
+                  <div class="subheading mb-0">Obegugl, Austria</div>
+                  <p class="mb-3">Brain Science and Artificial Intelligence.</p>
+            </div>
 
             </div>
         </div>
       </section>
 
       <hr class="m-0">
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-        </div>
-      </section>
-
-      <hr class="m-0">
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-        <div class="my-auto">
-          <h2 class="mb-5">Awards</h2>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Scholarship granted from Leibniz institute for Neurobiology in the context of the project “SFB 779 – MGK” for scoring the best grades in the integrative neuroscience master program.</li>
-
-          </ul>
-        </div>
-      </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
           <div class="my-auto">
@@ -311,6 +306,36 @@
 
           </div>
         </section>
+
+        <hr class="m-0">
+
+        <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+          <div class="my-auto">
+            <h2 class="mb-5">Awards</h2>
+            <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                Scholarship granted from Leibniz institute for Neurobiology in the context of the project “SFB 779 – MGK” for scoring the best grades in the integrative neuroscience master program.</li>
+  
+            </ul>
+          </div>
+        </section>
+        
+        <hr class="m-0">
+
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+        <div class="my-auto">
+          <h2 class="mb-5">Interests</h2>
+          <p>Apart from my scientific interests, in my free time I like to read and watch documentries, movies and sci-fi TV shows.</p>
+          <p>I am also passionate about cooking and like to explore different kinds of food. </p>
+          <p>My favourite sports are biking and swimming. </p>
+        </div>
+      </section>
+
+   
+
+    
 
     </div>
 
