--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Otto von Guericke University</h3>
+              <h3 class="mb-0">Otto von Guericke University, Germany</h3>
               <div class="subheading mb-3">Master of Science (Integrative Neuroscience)</div>
             </div>
             <div class="resume-date text-md-right">
@@ -221,7 +221,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Mansoura University</h3>
+              <h3 class="mb-0">Mansoura University, Egypt</h3>
               <div class="subheading mb-3">MBBCh (Bachelor of Medicine, Bachelor of Surgery)</div>
             </div>
             <div class="resume-date text-md-right">
@@ -275,10 +275,10 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
           <div class="my-auto">
-            <h2 class="mb-5">Projects</h2>
+            <h2 class="mb-5">Recent Projects</h2>
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                  <h3 class="mb-0">Deep learning for EEG decoding and brain dynamics discovery.</h3>
+                  <h3 class="mb-0">Deep learning for EEG decoding and brain dynamics discovery</h3>
                   <div>I am using deep learning models for classifying P300 ERP component in EEG data for BCI speller applications. 
                     In addition to that, I am using different features visualization techniques e.g. saliency maps to extract the important spatial and temporal 
                     features that drive the model and should reflect where attention originates in the brain and compare it to what we already know from the neuroscience literature.
@@ -289,7 +289,7 @@
     
               <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                  <h3 class="mb-0">Convolutional autoencoders for automatic LFP artifacts detection.</h3>
+                  <h3 class="mb-0">Convolutional autoencoders for automatic LFP artifacts detection</h3>
                   <div>I am using convolutional deconvolutional autoencoders to detect artifacts in Local Field Potential data in a semisupervised automatic way.
                   </div>
                 </div>
@@ -297,7 +297,7 @@
 
               <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
-                    <h3 class="mb-0">Investigating motor learning circuitry in a 7T  functional connectivity fMRI study.</h3>
+                    <h3 class="mb-0">Investigating motor learning circuitry in a 7T  functional connectivity fMRI study</h3>
                     <div>Motor/sequence learning is known to involve a cerebellar-thalamo-cortical circuit that especially includes VIM (Ventral Intermediate Nucleus Of The Thalamus).
                        We are trying to look closely into VIM with 7T high spatial resolution to investigate if it is possible to subdivide it into functionally distinct subregions.
                     </div>
@@ -320,7 +320,7 @@
             </ul>
           </div>
         </section>
-        
+
         <hr class="m-0">
 
 
