--- a/index.html
+++ b/index.html
@@ -279,10 +279,13 @@
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
                   <h3 class="mb-0">Deep learning for EEG decoding and brain dynamics discovery</h3>
-                  <div>I am using deep learning models for classifying P300 ERP component in EEG data for BCI speller applications. 
+                  <div class="mb-1">I am using deep learning models for classifying P300 ERP component in EEG data for BCI speller applications. 
                     In addition to that, I am using different features visualization techniques e.g. saliency maps to extract the important spatial and temporal 
                     features that drive the model and should reflect where attention originates in the brain and compare it to what we already know from the neuroscience literature.
                   </div>
+                  <a href="http://doi.org/10.12751/nncn.bc2018.0092" role="button" class="btn btn-outline-info btn-sm">Abstract</a>
+                  <a href="http://bit.ly/2PdqhcG" role="button" class="btn btn-outline-info btn-sm">Poster</a>
+                  <a href="https://github.com/amr-farahat/BCI-P300" role="button" class="btn btn-outline-info btn-sm">Code</a>
                 </div>
                 
               </div>
@@ -290,17 +293,20 @@
               <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
                   <h3 class="mb-0">Convolutional autoencoders for automatic LFP artifacts detection</h3>
-                  <div>I am using convolutional deconvolutional autoencoders to detect artifacts in Local Field Potential data in a semisupervised automatic way.
+                  <div class="mb-1">I am using convolutional deconvolutional autoencoders to detect artifacts in Local Field Potential data in a semisupervised automatic way.
                   </div>
+                  <a href="http://artifacts-detection.ml/" role="button" class="btn btn-outline-info btn-sm">Demo</a>
                 </div>
               </div>
 
               <div class="resume-item d-flex flex-column flex-md-row mb-5">
                   <div class="resume-content mr-auto">
                     <h3 class="mb-0">Investigating motor learning circuitry in a 7T  functional connectivity fMRI study</h3>
-                    <div>Motor/sequence learning is known to involve a cerebellar-thalamo-cortical circuit that especially includes VIM (Ventral Intermediate Nucleus Of The Thalamus).
+                    <div class="mb-1">Motor/sequence learning is known to involve a cerebellar-thalamo-cortical circuit that especially includes VIM (Ventral Intermediate Nucleus Of The Thalamus).
                        We are trying to look closely into VIM with 7T high spatial resolution to investigate if it is possible to subdivide it into functionally distinct subregions.
                     </div>
+                    <a href="https://drive.google.com/file/d/1Q-sLUaqV7esy4qhRO0CP03MQ0JW6Gv2H/view?usp=sharing" role="button" class="btn btn-outline-info btn-sm">Poster</a>
+                    <a href="https://www.youtube.com/watch?v=C4-bjGCcmNc" role="button" class="btn btn-outline-info btn-sm">Talk</a>
                   </div>
                 </div>
 
