--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a class="nav-link js-scroll-trigger" href="#qualifications">Further Qualifications</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+              <a class="nav-link js-scroll-trigger" href="#projects">Projects and Publications</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -275,7 +275,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
           <div class="my-auto">
-            <h2 class="mb-5">Recent Projects</h2>
+            <h2 class="mb-5">Recent Projects and Publications</h2>
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
                   <h3 class="mb-0">Deep learning for EEG decoding and brain dynamics discovery</h3>
