--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
+    <link rel="icon" href="img/icon.png">
 
   </head>
 
