--- a/index.html
+++ b/index.html
@@ -288,9 +288,17 @@
                   <a href="http://bit.ly/2PdqhcG" role="button" class="btn btn-outline-info btn-sm">Poster</a>
                   <a href="https://github.com/amr-farahat/BCI-P300" role="button" class="btn btn-outline-info btn-sm">Code</a>
                 </div>
-                
-              </div>
-    
+                </div>
+
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                  <div class="resume-content mr-auto">
+                    <h3 class="mb-0">YODO You Only Diagnose Once</h3>
+                    <div class="mb-1">I am using YOLOv2 for detcting pneumonic patches in chest X-ray images.
+                    </div>
+                    <a href="https://github.com/amr-farahat/YODO_You-Only-Diagnose-Once" role="button" class="btn btn-outline-info btn-sm">Code</a>
+                  </div>
+                  </div>
+
               <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
                   <h3 class="mb-0">Convolutional autoencoders for automatic LFP artifacts detection</h3>
