--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
-
+          <!-- <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="blog/index.html">Blog</a>
+          </li> -->
    
           <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://medium.com/me/stories/public">Blog</a>
@@ -298,6 +300,7 @@
                     features that drive the model and should reflect where attention originates in the brain and compare it to what we already know from the neuroscience literature.
                   </div>
                   <a href="http://doi.org/10.12751/nncn.bc2018.0092" role="button" class="btn btn-outline-info btn-sm">Abstract</a>
+                  <a href="https://doi.org/10.1101/614784" role="button" class="btn btn-outline-info btn-sm">Preprint</a>
                   <a href="http://bit.ly/2PdqhcG" role="button" class="btn btn-outline-info btn-sm">Poster</a>
                   <a href="https://github.com/amr-farahat/BCI-P300" role="button" class="btn btn-outline-info btn-sm">Code</a>
                 </div>
