add master thesis link

--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
                   <a href="http://doi.org/10.12751/nncn.bc2018.0092" role="button" class="btn btn-outline-info btn-sm">Abstract</a>
                   <a href="https://doi.org/10.1101/614784" role="button" class="btn btn-outline-info btn-sm">Preprint</a>
                   <a href="http://bit.ly/2PdqhcG" role="button" class="btn btn-outline-info btn-sm">Poster</a>
+                  <a href="http://bit.ly/2Xi8cOA" role="button" class="btn btn-outline-info btn-sm">Master Thesis</a>
                   <a href="https://github.com/amr-farahat/BCI-P300" role="button" class="btn btn-outline-info btn-sm">Code</a>
                 </div>
                 </div>
