--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
                     features that drive the model and should reflect where attention originates in the brain and compare it to what we already know from the neuroscience literature.
                   </div>
                   <a href="http://doi.org/10.12751/nncn.bc2018.0092" role="button" class="btn btn-outline-info btn-sm">Abstract</a>
+                  <a href="https://doi.org/10.1088/1741-2552/ab3bb4" role="button" class="btn btn-outline-info btn-sm">Paper</a>
                   <a href="https://doi.org/10.1101/614784" role="button" class="btn btn-outline-info btn-sm">Preprint</a>
                   <a href="http://bit.ly/2PdqhcG" role="button" class="btn btn-outline-info btn-sm">Poster</a>
                   <a href="http://bit.ly/2Xi8cOA" role="button" class="btn btn-outline-info btn-sm">Master Thesis</a>
