--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
             <a href="https://github.com/amr-farahat">
               <i class="fab fa-github"></i>
             </a>
-            <a href="https://www.kaggle.com/amro91">
+            <!-- <a href="https://www.kaggle.com/amro91">
               <i class="fab fa-kaggle"></i>
-            </a>
+            </a> -->
             <a href="https://twitter.com/AmrFouad_">
               <i class="fab fa-twitter"></i>
             </a>
