add doi to neurad

--- a/index.html
+++ b/index.html
@@ -402,7 +402,9 @@
                   </tr>
                   
                   <tr><td>
-                      Farahat A, Hinrichs H, Heinze H-J, Sweeney-Reed CM (2019) Implicit motor learning modulates functional connectivity of DBS therapeutic target for tremor. Neurorad 2019, Frankfurt.
+                      Farahat A, Hinrichs H, Heinze H-J, Sweeney-Reed CM (2019) Implicit motor learning modulates functional connectivity of DBS therapeutic target 
+                      for tremor. Clin Neuroradiol (2019) 29(Suppl 1): 1. doi:<a href="https://doi.org/10.1007/s00062-019-00826-9">10.1007/s00062-019-00826-9</a>
+
                     </td>
                     </tr>
                 </tbody>
