cjange order of abtracts

--- a/index.html
+++ b/index.html
@@ -387,17 +387,19 @@
                   </tr>
                   <tr>
                     <th scope="row" rowspan="3">Abstracts and Posters</th>
-                    <td>Farahat A, Reichert C, Sweeney-Reed CM, Hinrichs H (2018) Convolutional neural
-                        networks for EEG decoding and exploration of brain dynamics. Bernstein Conference
-                        2018. doi:<a href="https://doi.org/10.12751/nncn.bc2018.0092">10.12751/nncn.bc2018.0092</a></td>
+                    <td>
+                        Farahat A, Hinrichs H, Heinze H-J, Sweeney-Reed CM (2017) Can The Ventral
+                        Intermediate Nucleus Of The Thalamus Be Divided Into Functionally Distinct
+                        Subregions Differentially Involved In Motor Learning And Essential Tremor? 5th HBP
+                        Winter School 2017.
+                     </a></td>
 
                   </tr>
                 
                   <tr><td>
-                      Farahat A, Hinrichs H, Heinze H-J, Sweeney-Reed CM (2017) Can The Ventral
-                      Intermediate Nucleus Of The Thalamus Be Divided Into Functionally Distinct
-                      Subregions Differentially Involved In Motor Learning And Essential Tremor? 5th HBP
-                      Winter School 2017.
+                      Farahat A, Reichert C, Sweeney-Reed CM, Hinrichs H (2018) Convolutional neural
+                      networks for EEG decoding and exploration of brain dynamics. Bernstein Conference
+                      2018. doi:<a href="https://doi.org/10.12751/nncn.bc2018.0092">10.12751/nncn.bc2018.0092
                     </td>
                   </tr>
                   
