add the poster prize award

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
           <!-- <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="blog/index.html">Blog</a>
-          </li> -->
+            <a class="nav-link js-scroll-trigger" href="https://amr-farahat.github.io/blog/">Blog</a>
+          </li> --> -->
    
           <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://medium.com/me/stories/public">Blog</a>
-          </li> !-->
+          </li> !
         </ul>
       </div>
     </nav>
@@ -423,6 +423,9 @@
               <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
                 Scholarship granted from Leibniz institute for Neurobiology in the context of the project “SFB 779 – MGK” for scoring the best grades in the integrative neuroscience master program.</li>
+                <i class="fa-li fa fa-trophy text-warning"></i>
+                Poster prize during the Neurorad Conference in Frankfurt 2019 awarded from the German and Austrian Societies of Neuroradiology.
+                </li>
   
             </ul>
           </div>
