add the poster prize award

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
               <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
                 Scholarship granted from Leibniz institute for Neurobiology in the context of the project “SFB 779 – MGK” for scoring the best grades in the integrative neuroscience master program.</li>
-                <i class="fa-li fa fa-trophy text-warning"></i>
+                <li><i class="fa-li fa fa-trophy text-warning"></i>
                 Poster prize during the Neurorad Conference in Frankfurt 2019 awarded from the German and Austrian Societies of Neuroradiology.
                 </li>
   
