Add new education

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               </div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">April 2019 – Present</span>
+              <span class="text-primary">April 2019 – October 2019</span>
             </div>
           </div>
 
@@ -248,6 +248,16 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
           <h2 class="mb-5">Education</h2>
+          
+             <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class= "mb-0">International Max Planck Research School for neural circuits, Frankfurt, Germany</h3>
+              <div class="subheading mb-3">PhD candidate</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">November 2019 - Present</span>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
