--- a/index.html
+++ b/index.html
@@ -173,6 +173,19 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="internships">
         <div class="my-auto">
           <h2 class="mb-5">Internships</h2>
+          
+          <div class="resume-item d-flex flex-column flex-md-row mb-3">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Research Intern</h3>
+              <div class="subheading mb-3" style="white-space:pre-line;">Frankfurt Institute for Advanced Studies (FIAS), Frankfurt, Germany.
+                  Research Group of Jochen Triesch
+              </div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">November 2019 – Present</span>
+            </div>
+          </div>
+          
           <div class="resume-item d-flex flex-column flex-md-row mb-3">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Master thesis student</h3>
