update google scholar

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
     <link rel="icon" href="img/icon.png">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
+
 
   </head>
 
@@ -95,6 +97,9 @@
 
           </p>
           <div class="social-icons">
+            <a href="https://scholar.google.com/citations?user=cY_w0CIAAAAJ&hl=en">
+              <i class="ai ai-google-scholar ai-1x"></i> 
+            </a>
             <a href="https://www.linkedin.com/in/amr-farahat-738595151/">
               <i class="fab fa-linkedin-in"></i>
             </a>
