--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Eastern European Machine Learning Summer School (EEML) 2021</h3>
-              
+              <div class="subheading mb-3">A deep learning and reinforcement learning summer school</div>
             </div>
           </div>
           
