--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                     <tr>
                     <td></td>
                     <td>
-                      <b>Farahat A</b>, Effenberger F, Vinck M (2021) Shape representation in convolutional neural networks. ESISync.
+                      <b>Farahat A</b>, Effenberger F, Vinck M (2021) Shape representations in convolutional neural networks. ESISync.
                     </td>
                   </tr>
             
