--- a/index.html
+++ b/index.html
@@ -493,6 +493,13 @@
                     </td>
                   </tr>
             
+                    <tr>
+                    <td></td>
+                    <td>
+                      <b>Farahat A</b>, Effenberger F, Vinck M (2021) How do convolutional neural networks understand shape? Champalimaud Research Symposium.
+                    </td>
+                  </tr>
+            
                 </tbody>
               </table>
           </div>
