--- a/index.html
+++ b/index.html
@@ -467,8 +467,14 @@
                     </td>
                   </tr>
                     
-        
-                  </tr>
+                  <tr>
+                    <td></td>
+                  <td><b>Farahat, A.</b>, Lu, D., Bauer, S., Neubert, V., Costard, L.S., Rosenow, F. and Triesch, J., (2022). 
+                    Diagnosing Epileptogenesis with Deep Anomaly Detection.
+                    Proceedings of the 7th Machine Learning for Healthcare Conference, PMLR 182:1-18
+                  </td>
+                </tr>
+
                   <tr>
                     <th scope="row" rowspan="1">Master thesis</th>
                     <td>Deep Learning for EEG Decoding and Automatic Feature Discovery.</td>
