--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
               <div class="resume-content mr-auto">
                 <h3 class="mb-0">Diagnosing Epileptogenesis with Deep Anomaly Detection</h3>
-                <div class="mb-1">I am using deep learning models for classifying P300 ERP component in EEG data for BCI speller applications. 
-                  In addition to that, I am using different features visualization techniques e.g. saliency maps to extract the important spatial and temporal 
-                  features that drive the model and should reflect where attention originates in the brain and compare it to what we already know from the neuroscience literature.
+                <div class="mb-1">
+                  We use data from a rodent epilepsy model to show the feasibility of using an unsupervised deep anomaly detection framework using adversarial autoencoders to detect subtle changes in brain electrical activity triggered by brain injury that lead eventually to an epileptic brain.
+ 
                 </div>
                 <a href="https://doi.org/10.1016/j.clinph.2021.02.327" role="button" class="btn btn-outline-info btn-sm">Abstract</a>
                 <a href="https://static1.squarespace.com/static/59d5ac1780bd5ef9c396eda6/t/62e97661b4dffb7f5e539e1f/1659467365616/50+MLHC_2022.pdf" role="button" class="btn btn-outline-info btn-sm">Paper</a>
