--- a/index.html
+++ b/index.html
@@ -502,12 +502,18 @@
                       Proceedings of the 7th Machine Learning for Healthcare Conference, <a href="https://www.mlforhc.org/s/50-MLHC_2022.pdf">PMLR 182:1-18</a>
                     </td>
 
-
+                    <tr>
+                      <td></td>
+                    <td>Voegtle, A., Terlutter, C., Nikola, K., <b>Farahat, A.</b>, Hinrichs, H., Sweeney-Reed, C., <b>(2022)</b>. 
+                     Suppression of Motor Sequence Learning and Execution Through Anodal Cerebellar Transcranial Electrical Stimulation.
+                      The Cerebellum. doi:<a href="https://doi.org/10.1007/s12311-022-01487-0">10.1007/s12311-022-01487-0</a>
+                    </td>
+                  </tr>
                     
                     
                     <tr>
                       <td></td>
-                    <td>Terzic, L., Voegtle, A., <b>Farahat, A.</b>, Hartong, N., Galazky, I., Nasuto, S.J., Andrade, A.D.O., Knight, R.T., Ivry, R.B., Voges, J. and Buentjen, L., <b>(2022)</b>. 
+                    <td>Terzic, L., Voegtle, A., <b>Farahat, A.</b>, Hartong, N., Galazky, I., Nasuto, S.J., Andrade, A.D.O., Knight, R.T., Ivry, R.B., Voges, J. and Buentjen, L., Sweeney-Reed, C., <b>(2022)</b>. 
                       Deep brain stimulation of the ventrointermediate nucleus of the thalamus to treat essential tremor improves motor sequence learning.
                       Human Brain Mapping. doi:<a href="https://doi.org/10.1002/hbm.25989">10.1002/hbm.25989</a>
                     </td>
